<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shaman</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_refresh">Actualizar Servicios</string>
    <string name="detalle_servicio">Detalle</string>
    <string name="acciones_servicio">Acciones</string>
    <string name="geo_servicio">Ubicación</string>
    <string name="action_ubicacion">Ubicación</string>
    <string name="title_activity_mapa_servicio">Ubicación del Servicio</string>
    <string name="title_activity_config_general">Configuración General</string>
    <string name="action_configuracion_general">Configuración</string>
    <string name="title_activity_final_servicio">Final del Servicio</string>
    <string name="action_actualizar_sistema">Actualizar Datos</string>
    <string name="title_activity_actualizar_informacion">Actualizar Información</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_historia_clinica">Historia Clínica</string>
    <string name="title_activity_cancelar_servicio">Cancelar Servicio</string>
    <string name="hello_world">Hello world!</string>
    <string name="solicita_nro_report">Solicita Nro. Report al cierre</string>
    <string name="order_services">Ordenar los servicios</string>
    <string name="solicita_imagen_adjunta_al_cierre">Solicita imagen adjunta al cierre</string>
    <string name="enable_service_cancelation">Habilitar cancelación de servicio</string>
    <string name="title_activity_access_time">Ingreso</string>
    <string name="nro_de_legajo">Nro. de legajo</string>
    <string name="pin">PIN</string>
    <string name="access_time_in">Ingreso</string>
    <string name="access_time_exit">Salida</string>
    <string name="access_time_entry">Ingreso</string>
    <string name="access_time_register_entry_exit">Registrar ingreso</string>
    <string name="access_time_register_entry">Registrar ingreso</string>
    <string name="access_time_register_exit">Registrar salida</string>
    <string name="enable_service_entry_exit">Habilitar ingreso/salida</string>
    <string name="services_menu_label_ingreso">Ingreso</string>
    <string name="services_menu_label_update_data">Actualizar datos</string>
    <string name="services_menu_label_configuration">Configuración</string>
    <string name="services_menu_label_update_parameters">Actualización de parámetros</string>

    <!-- COSAS PARA TESTING MATERIAL -->
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_services">Servicios</string>
    <string name="nav_settings">Configuración</string>
    <string name="nav_entry_exit">Ingreso / Salida</string>
    <string name="nav_logout">Cerrar sesión</string>
    <string name="nav_about_us">Acerca de nosotros</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Servicios</item>
        <item>Configuración</item>
        <item>Ingreso / Salida</item>
        <item>Cerrar sesión</item>
        <item>Acerca de nosotros</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_info">Información</string>

    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>


</resources>
