<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ServiciosActivity" >

    <item android:id="@+id/action_access_time"
        app:showAsAction="always"
        android:title="@string/services_menu_label_ingreso"
        android:icon="@drawable/ic_action_access_time"
        />

    <item android:id="@+id/action_refresh"
        app:showAsAction="always"
        android:title="@string/services_menu_label_update_data"
        android:icon="@drawable/ic_action_refresh"
    />
    <item android:id="@+id/action_settings"
        app:showAsAction="always"
        android:title="@string/services_menu_label_configuration"
        android:icon="@drawable/ic_action_settings"
        />
    <item android:id="@+id/action_actualizar_parametros"
        app:showAsAction="always"
        android:title="@string/services_menu_label_update_parameters"
        android:icon="@drawable/ic_action_download"
        />

</menu>
