<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_access_time_legajo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nro_de_legajo"
        android:inputType="number"
        android:textStyle="bold"
        android:typeface="sans" />

    <EditText
        android:id="@+id/et_access_time_dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/dni"
        android:inputType="number"
        android:textStyle="bold"
        android:typeface="sans" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/btn_access_time_entry_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:textSize="18dp"
        android:onClick="onSwitchEntryExit"
        android:text="@string/access_time_entry" />

    <Button
        android:id="@+id/btn_access_time_save"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:textSize="@dimen/font_size_buttons"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:typeface="sans"
        android:text="@string/access_time_register_entry"
        android:textColor="@android:color/white"
        android:background="@drawable/sel_button_round"
        android:drawableLeft="@drawable/ic_action_llegada"
        android:onClick="onRegisterEntryExit"/>

</LinearLayout>